--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -139,6 +139,8 @@ jpn:
       # load: "Charger les modèles de document par défaut"
       # new: "Création d’un modèle de document"
       # print: "Imprimer un exemple"
+    backend/documents:
+      # index: "Gestion électronique des documents"
     backend/entities:
       # destroy: "Supprimer la fiche"
       # edit: "Modifier la fiche\_: %{full_name}"
@@ -234,6 +236,7 @@ jpn:
       # reopen: "Déclôturer le journal\_: %{name}"
       # reports: "Impression, exportation"
       # show: "Journal\_: %{name} (%{code})"
+    backend/kujakus: #?
     backend/land_parcel_groups:
       # edit: "Modifier l'ilôt\_: %{name}"
       # index: "Ilôts"
@@ -652,6 +655,7 @@ jpn:
     # accountancy: "Comptabilité"
     # accounting_balance: "Balance comptable"
     # accounts: "Comptes comptables"
+    # accounts_only_used_on: "Comptes utilisés seulement sur"
     # accounts_to_load: "Plan de compte à charger"
     # active: "Actif"
     # active_balance_sheet: "Bilan actif"
@@ -1039,45 +1043,21 @@ jpn:
       tools: "道具" #?
     menus:
       # accountancy: "Comptabilité"
+      # archives: "Archives"
+      # documents: "GED"
+      # exchange: "Échange de données"
       # finances: "Finances"
       # general: "Général"
       # home: "Accueil"
       # index: "Ekylibre"
+      # mandates: "Responsabilités"
       # production: "Production"
       # purchases: "Achats"
       # relationship: "Tiers"
       # sales: "Ventes"
       # settings: "Configuration"
       # stocks: "Stocks"
-      submenus:
-        # accounts: "Comptes"
-        # assets: "Immobilisations"
-        # cashes: "Trésorerie"
-        # company: "Société"
-        # entities: "Personnes"
-        # equipments: "Matériels"
-        # events: "Évènements"
-        # financial_years: "Exercices"
-        # incoming_deliveries: "Réceptions"
-        # incoming_payments: "Encaissements"
-        # informations: "Informations"
-        # journals: "Journaux"
-        # land_parcels: "Îlots et travaux"
-        # mandates: "Responsabilités"
-        # my_account: "Mon compte"
-        # outgoing_deliveries: "Expéditions"
-        # outgoing_payments: "Décaissements"
-        # parameters: "Paramètres"
-        # production_chains: "Chaînes de production"
-        # products: "Produits"
-        # purchases: "Achats"
-        # reporting: "États"
-        # rights: "Droits d’accès"
-        # sales: "Ventes"
-        # stocks: "Stocks"
-        # subscriptions: "Abonnements"
-        # tasks: "Tâches"
-        # tax_declarations: "Déclarations de taxes"
+      submenus: #?
       # trade: "Commerce"
     # merge: "Fusionner"
     # meteo: "Météo"
@@ -1148,6 +1128,7 @@ jpn:
     # no_filters: "--- Pas de filtre ---"
     # no_javascript: "Votre navigateur ne supporte pas le javascript. Vous devez l’activer pour pouvoir utiliser le logiciel. Merci de votre compréhension."
     # no_origin: "-- Sans origine --"
+    # no_particular_periods: "Aucune période en particulier"
     # no_products: "Sans produit"
     # no_proposer: "-- Sans parrain ni marraine --"
     # no_purchases: "Aucun achat en attente de reception"
@@ -1421,8 +1402,8 @@ jpn:
     # to_deposit: "À encaisser"
     # today: "Aujourd'hui"
     # tool_update: "Modifier le matériel"
-    # tools: "Matériel utilisé"
-    # tools_list: "Matériel"
+    # tools: "Outils"
+    # tools_list: "Liste d'outils"
     # total: "Total"
     # total_amount: "Montant total HT"
     # total_in_currency: "Total (%{currency})"
@@ -1468,7 +1449,6 @@ jpn:
     # usage: "Utilisation"
     # use_incoming_payment: "Rattacher l’encaissement %{payment}"
     # use_renew: "Sélectionnez un journal pour reporter les à nouveaux"
-    # used_accounts: "Comptes utilisés seulement"
     user_name: "ユーザー名"
     # user_update: "Modifier les informations de l’utilisateur"
     # users: "Compte utilisateur"
