--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -172,7 +172,8 @@ spa:
       load: "Cargar los modelos de documento por defecto"
       new: "Créacion de un modelo de documento"
       # print: "Imprimer un exemple"
-    backend/documents:  #?
+    backend/documents:
+      # index: "Gestion électronique des documents"
       print: "Impresion, exportacion" #?
     backend/entities:
       # destroy: "Supprimer la fiche"
@@ -275,6 +276,7 @@ spa:
       reopen: "Déclôture du %{name}"
       # reports: "Impression, exportation"
       show: "Periodico : %{name} (%{code})"
+    backend/kujakus: #?
     backend/land_parcel_groups:
       # edit: "Modifier l'ilôt\_: %{name}"
       # index: "Ilôts"
@@ -740,6 +742,7 @@ spa:
     accountancy: "contabilidad"
     # accounting_balance: "Balance comptable"
     accounts: "Cuentos contables utilizados"
+    # accounts_only_used_on: "Comptes utilisés seulement sur"
     # accounts_to_load: "Plan de compte à charger"
     # active: "Actif"
     active_balance_sheet: "Balance activo"
@@ -1140,45 +1143,21 @@ spa:
     menu: #?
     menus:
       # accountancy: "Comptabilité"
+      # archives: "Archives"
+      # documents: "GED"
+      # exchange: "Échange de données"
       # finances: "Finances"
       # general: "Général"
       # home: "Accueil"
       # index: "Ekylibre"
+      # mandates: "Responsabilités"
       # production: "Production"
       # purchases: "Achats"
       # relationship: "Tiers"
       # sales: "Ventes"
       # settings: "Configuration"
       # stocks: "Stocks"
-      submenus:
-        # accounts: "Comptes"
-        # assets: "Immobilisations"
-        # cashes: "Trésorerie"
-        # company: "Société"
-        # entities: "Personnes"
-        # equipments: "Matériels"
-        # events: "Évènements"
-        # financial_years: "Exercices"
-        # incoming_deliveries: "Réceptions"
-        # incoming_payments: "Encaissements"
-        # informations: "Informations"
-        # journals: "Journaux"
-        # land_parcels: "Îlots et travaux"
-        # mandates: "Responsabilités"
-        # my_account: "Mon compte"
-        # outgoing_deliveries: "Expéditions"
-        # outgoing_payments: "Décaissements"
-        # parameters: "Paramètres"
-        # production_chains: "Chaînes de production"
-        # products: "Produits"
-        # purchases: "Achats"
-        # reporting: "États"
-        # rights: "Droits d’accès"
-        # sales: "Ventes"
-        # stocks: "Stocks"
-        # subscriptions: "Abonnements"
-        # tasks: "Tâches"
-        # tax_declarations: "Déclarations de taxes"
+      submenus: #?
       # trade: "Commerce"
     # merge: "Fusionner"
     # meteo: "Météo"
@@ -1249,6 +1228,7 @@ spa:
     # no_filters: "--- Pas de filtre ---"
     no_javascript: "Su navegante no soporta el javascript. se debe activarlo para utilizar el software. Gracias para su comprension."
     # no_origin: "-- Sans origine --"
+    # no_particular_periods: "Aucune période en particulier"
     # no_products: "Sans produit"
     # no_proposer: "-- Sans parrain ni marraine --"
     # no_purchases: "Aucun achat en attente de reception"
@@ -1532,8 +1512,8 @@ spa:
     # to_deposit: "À encaisser"
     # today: "Aujourd'hui"
     # tool_update: "Modifier le matériel"
-    # tools: "Matériel utilisé"
-    # tools_list: "Matériel"
+    # tools: "Outils"
+    # tools_list: "Liste d'outils"
     total: "Total"
     total_amount: "Total importe HT"
     # total_in_currency: "Total (%{currency})"
@@ -1581,7 +1561,7 @@ spa:
     # usage: "Utilisation"
     # use_incoming_payment: "Rattacher l’encaissement %{payment}"
     use_renew: "Seleccionar un periodico para los aplazamientos de nuevo"
-    used_accounts: "Cuentos utilozados unico"
+    used_accounts: "Cuentos utilozados unico" #?
     user_create: "Añadir un nuevo utilizador" #?
     user_name: "Nombre de usuario"
     user_update: "Modificar las informaciones del utilizador"
