--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -157,6 +157,8 @@ fra:
       load: "Charger les modèles de document par défaut"
       new: "Création d’un modèle de document"
       print: "Imprimer un exemple" #?
+    backend/documents:
+      index: "Gestion électronique des documents"
     backend/entities:
       destroy: "Supprimer la fiche" #?
       edit: "Modifier la fiche\_: %{full_name}"
@@ -256,6 +258,8 @@ fra:
       reopen: "Déclôturer le journal\_: %{name}"
       reports: "Impression, exportation"
       show: "Journal\_: %{name} (%{code})"
+    backend/kujakus:
+      # toggle: "Toggle backend/kujaku"
     backend/land_parcel_groups:
       edit: "Modifier l'ilôt\_: %{name}"
       index: "Ilôts"
@@ -641,6 +645,7 @@ fra:
     backend/journal_entries: "Écritures comptables"
     backend/journal_entry_items: "Lignes d’écritures comptables"
     backend/journals: "Journaux"
+    # backend/kujakus: "Backend/kujakus"
     # backend/land_parcel_groups: "Backend/land parcel groups"
     backend/land_parcels: "Îlots"
     backend/listing_node_items: "Élement de nœuds d’extractions"
@@ -754,6 +759,7 @@ fra:
     accountancy: "Comptabilité"
     accounting_balance: "Balance comptable"
     accounts: "Comptes comptables"
+    accounts_only_used_on: "Comptes utilisés seulement sur"
     accounts_to_load: "Plan de compte à charger"
     active: "Actif"
     active_balance_sheet: "Bilan actif"
@@ -1136,45 +1142,20 @@ fra:
     meeting: "Lieu(x) de rencontre"
     menus:
       accountancy: "Comptabilité"
+      archives: "Archives"
+      documents: "GED"
+      exchange: "Échange de données"
       finances: "Finances"
       general: "Général"
       home: "Accueil"
       index: "Ekylibre"
+      mandates: "Responsabilités"
       production: "Production"
       purchases: "Achats"
       relationship: "Tiers"
       sales: "Ventes"
       settings: "Configuration"
       stocks: "Stocks"
-      submenus:
-        accounts: "Comptes"
-        assets: "Immobilisations"
-        cashes: "Trésorerie"
-        company: "Société"
-        entities: "Personnes"
-        equipments: "Matériels"
-        events: "Évènements"
-        financial_years: "Exercices"
-        incoming_deliveries: "Réceptions"
-        incoming_payments: "Encaissements"
-        informations: "Informations"
-        journals: "Journaux"
-        land_parcels: "Îlots et travaux"
-        mandates: "Responsabilités"
-        my_account: "Mon compte"
-        outgoing_deliveries: "Expéditions"
-        outgoing_payments: "Décaissements"
-        parameters: "Paramètres"
-        production_chains: "Chaînes de production"
-        products: "Produits"
-        purchases: "Achats"
-        reporting: "États"
-        rights: "Droits d’accès"
-        sales: "Ventes"
-        stocks: "Stocks"
-        subscriptions: "Abonnements"
-        tasks: "Tâches"
-        tax_declarations: "Déclarations de taxes"
       trade: "Commerce"
     merge: "Fusionner"
     meteo: "Météo"
@@ -1245,6 +1226,7 @@ fra:
     no_filters: "--- Pas de filtre ---"
     no_javascript: "Votre navigateur ne supporte pas le javascript. Vous devez l’activer pour pouvoir utiliser le logiciel. Merci de votre compréhension."
     no_origin: "-- Sans origine --"
+    no_particular_periods: "Aucune période en particulier"
     no_products: "Sans produit"
     no_proposer: "-- Sans parrain ni marraine --"
     no_purchases: "Aucun achat en attente de reception"
@@ -1517,8 +1499,8 @@ fra:
     to_deposit: "À encaisser"
     today: "Aujourd'hui"
     tool_update: "Modifier le matériel"
-    tools: "Matériel utilisé"
-    tools_list: "Matériel"
+    tools: "Outils"
+    tools_list: "Liste d'outils"
     total: "Total"
     total_amount: "Montant total HT"
     total_in_currency: "Total (%{currency})"
@@ -1564,7 +1546,6 @@ fra:
     usage: "Utilisation"
     use_incoming_payment: "Rattacher l’encaissement %{payment}"
     use_renew: "Sélectionnez un journal pour reporter les à nouveaux"
-    used_accounts: "Comptes utilisés seulement"
     user_name: "Nom d’utilisateur"
     user_update: "Modifier les informations de l’utilisateur"
     users: "Compte utilisateur"
