Fixes nomenclatures hierarchy

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -53,7 +53,7 @@ arb:
         # children: "Sous lieu de stockage"
         # content_maximal_quantity: "Quantité maximale supportée"
         # content_nature: "Type de Produit contenu"
-        # variety: "Genre"
+        # variety: "Type"
       campaign:
         # nomen: "Code nomenclature"
       cash:
@@ -673,11 +673,7 @@ arb:
         locked: "حساب مغلق"
         # maximal_grantable_reduction_percentage: "Taux de réduction autorisé (%)"
         name: "اسم المستخدم"
-      vegetal:
-        # born_at: "Date création"
-        # nature: "Nature de la culture"
-        # reproductor: "Multiplication"
-        # variety: "Variété"
+      vegetal: #?
     errors:
       messages:
         accepted: "%{attribute} يجب أن تكون مقبولة"
