--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -30,7 +30,7 @@ fra:
         children: "Sous lieu de stockage"
         content_maximal_quantity: "Quantité maximale supportée"
         content_nature: "Type de Produit contenu"
-        variety: "Genre"
+        variety: "Type"
       campaign:
         nomen: "Code nomenclature"
       cash:
@@ -175,11 +175,6 @@ fra:
         locked: "Compte verrouillé"
         maximal_grantable_reduction_percentage: "Taux de réduction autorisé (%)"
         name: "Nom d’utilisateur"
-      vegetal:
-        born_at: "Date création"
-        nature: "Nature de la culture"
-        reproductor: "Multiplication"
-        variety: "Variété"
     errors:
       messages:
         accepted: "%{attribute} doit être accepté"
