--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -142,6 +142,7 @@ arb:
       # settings_sales: "Configuration des ventes"
       # settings_stocks: "Configuration des stocks"
       # stocks: "Tableau de bord des stocks"
+      # tools: "Tableau de bord des outils"
       # trade: "Tableau de bord de la gestion commerciale"
       # welcome: "Bienvenue dans Ekylibre"
     backend/delays:  #?
@@ -238,7 +239,8 @@ arb:
       new: "انشاء مهنة جديدة"
       show: "ممارسة المحاسبة %{code}"
     backend/help: #?
-    backend/helps: #?
+    backend/helps:
+      # index: "Aide"
     backend/incoming_deliveries:
       # confirm: "Confirmer l’arrivée de la livraison"
       # edit: "Modifier l’arrivage: %{number}"
@@ -1641,6 +1643,7 @@ arb:
     # supplier_code: "Code fournisseur"
     # supplier_informations: "Informations fournisseur"
     supply: "التسليم"
+    # support: "Support"
     synthesis: "تجميع الوثائق"
     # target: "Cible"
     tax_create: "اضافة ضريبة جديدة" #?
