--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -120,21 +120,21 @@ fra:
       finances: "Tableau de bord financier" #?
       index: "Tableau de bord général"
       production: "Tableau de bord de la production"
-      # production_equipments: "Production equipments backend/dashboard"
       purchases: "Tableau de bord des achats"
       relationship: "Tableau de bord de la gestion des relations"
       sales: "Tableau de bord des ventes"
       search: "Recherche de\_: %{searched}"
       settings: "Configuration"
-      settings_accountancy: "Configuration de la comptabilité"
-      settings_base: "Configuration de base"
-      settings_production: "Configuration des productions"
-      settings_products: "Configuration des produits"
-      settings_purchases: "Configuration des achats"
-      settings_relationship: "Configuration des tiers"
-      settings_sales: "Configuration des ventes"
-      settings_stocks: "Configuration des stocks"
+      settings_accountancy: "Configuration de la comptabilité" #?
+      settings_base: "Configuration de base" #?
+      settings_production: "Configuration des productions" #?
+      settings_products: "Configuration des produits" #?
+      settings_purchases: "Configuration des achats" #?
+      settings_relationship: "Configuration des tiers" #?
+      settings_sales: "Configuration des ventes" #?
+      settings_stocks: "Configuration des stocks" #?
       stocks: "Tableau de bord des stocks"
+      tools: "Tableau de bord des outils"
       trade: "Tableau de bord de la gestion commerciale" #?
       welcome: "Bienvenue dans Ekylibre"
     backend/departments:
@@ -212,7 +212,7 @@ fra:
       new: "Créer un nouvel exercice"
       show: "Exercice comptable %{code}"
     backend/helps:
-      # index: "Index backend/help"
+      index: "Aide"
       # show: "Show backend/help"
       # toggle: "Toggle backend/help"
     backend/incoming_deliveries:
@@ -1488,6 +1488,7 @@ fra:
     supplier_code: "Code fournisseur"
     supplier_informations: "Informations fournisseur"
     supply: "Livraison"
+    support: "Support"
     synthesis: "Documents de synthèse"
     target: "Cible"
     tax_declaration_create: "Ajouter une nouvelle déclaration"
