finish first wheat IT XML procedure.

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -10,6 +10,7 @@ eng:
         # fertilize: "Fertiliser"
         # germinate: "Germer"
         # harvest: "Récolter"
+        # kill: "Tuer"
         # plow_driving: "Conduire un ensemble de labour"
         # plowing: "Labourer"
         # sowing: "Semer"
@@ -33,6 +34,7 @@ eng:
         # matter: "Matérialisable"
         # mineral_matter: "Matières minérales"
         # organic_matter: "Matières organiques"
+        # phytosanitary: "Produits phytosanitaires"
         # plant: "Végétaux"
         # product: "Produits"
         # product_group: "Groupe de produits"
@@ -43,25 +45,33 @@ eng:
       # name: "Compétences"
       taggers: #?
   procedures:
+    # chemical_treatment: "Traitement chimique"
     # mineral_fertilizing: "Fertilisation minérale"
     # organic_fertilizing: "Fertilisation organique"
     # plowing: "Labour"
+    # seed_harvest: "Moisson"
     # sowing: "Semis"
     # superficial_plowing: "Hersage"
     # wheat_crop_std: "Culture de blé standard"
   variables:
     # cropper: "Moissonneuse batteuse"
+    # cropper_driver: "Conducteur de moissonneuse batteuse"
     # culture: "Culture"
     # driver: "Conducteur"
     # fertilizer: "Engrais"
     # fertilizer_to_spread: "Engrais à épandre"
+    # grains: "Grains"
     # harrow: "Herse"
     # land_parcel: "Parcelle"
     # manure: "Fumier"
     # manure_to_spread: "Fumier à épandre"
+    # molecule: "Molécule"
     # plow: "Charrue"
     # seeder: "Semoir"
     # seeds: "Semences"
     # seeds_to_sow: "Semence à semer"
+    # silo: "Silo"
     # spreader: "Epandeur"
+    # straw: "Paille"
     # tractor: "Tracteur"
+    # trailer: "Remorque"
