--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -10,6 +10,7 @@ fra:
         fertilize: "Fertiliser"
         germinate: "Germer"
         harvest: "Récolter"
+        kill: "Tuer"
         plow_driving: "Conduire un ensemble de labour"
         plowing: "Labourer"
         sowing: "Semer"
@@ -35,6 +36,7 @@ fra:
         matter: "Matérialisable"
         mineral_matter: "Matières minérales"
         organic_matter: "Matières organiques"
+        phytosanitary: "Produits phytosanitaires"
         plant: "Végétaux"
         immatter: "Immatérialisable"
         service: "Services"
@@ -43,25 +45,33 @@ fra:
       name: "Compétences"
       taggers:
   procedures:
+    chemical_treatment: "Traitement chimique"
     mineral_fertilizing: "Fertilisation minérale"
     organic_fertilizing: "Fertilisation organique"
     plowing: "Labour"
+    seed_harvest: "Moisson"
     sowing: "Semis"
     superficial_plowing: "Hersage"
     wheat_crop_std: "Culture de blé standard"
   variables:
     culture: "Culture"
     cropper: "Moissonneuse batteuse"
+    cropper_driver: "Conducteur de moissonneuse batteuse"
     driver: "Conducteur"
     fertilizer: "Engrais"
     fertilizer_to_spread: "Engrais à épandre"
+    grains: "Grains"
     harrow: "Herse"
     land_parcel: "Parcelle"
     manure: "Fumier"
     manure_to_spread: "Fumier à épandre"
+    molecule: "Molécule"
     plow: "Charrue"
     seeder: "Semoir"
     seeds: "Semences"
     seeds_to_sow: "Semence à semer"
+    silo: "Silo"
     spreader: "Epandeur"
+    straw: "Paille"
     tractor: "Tracteur"
+    trailer: "Remorque"
