--- a/config/locales/fra/prints/sales_invoice.xml
+++ b/config/locales/fra/prints/sales_invoice.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sale_invoice" language="groovy" pageWidth="595" pageHeight="842" columnWidth="545" leftMargin="25" rightMargin="25" topMargin="25" bottomMargin="25" isFloatColumnFooter="true" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
-	<property name="ireport.zoom" value="1.2396694214876032"/>
+	<property name="ireport.zoom" value="1.4019755979255695"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="820"/>
+	<property name="ireport.y" value="1104"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.xml"]]></template>
 	<style name="Title" fontName="DejaVu Sans" fontSize="50" isBold="true" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
@@ -143,32 +143,34 @@
 		<fieldDescription><![CDATA[supplier/default-mail-address/coordinate]]></fieldDescription>
 	</field>
 	<field name="picture-path" class="java.lang.String">
-		<fieldDescription><![CDATA[picture-path]]></fieldDescription>
+		<fieldDescription><![CDATA[supplier/picture-path]]></fieldDescription>
 	</field>
 	<background>
 		<band height="132">
-			<image onErrorType="Blank">
-				<reportElement uuid="2d16fc74-a19d-4df0-a5d6-06465493c786" x="0" y="0" width="140" height="97"/>
-				<imageExpression><![CDATA[$F{picture-path}]]></imageExpression>
-			</image>
-		</band>
-	</background>
-	<title>
-		<band height="250" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="762330c6-a035-463c-be4a-d3d1f4e26fd6" style="strong" mode="Opaque" x="183" y="10" width="387" height="2" backcolor="#7C9DDD"/>
+				<reportElement uuid="762330c6-a035-463c-be4a-d3d1f4e26fd6" style="strong" mode="Opaque" x="183" y="15" width="387" height="2" backcolor="#7C9DDD"/>
 				<textElement/>
 				<text><![CDATA[]]></text>
 			</staticText>
+		</band>
+	</background>
+	<title>
+		<band height="368" splitType="Stretch">
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="73838c95-a607-4f37-9108-5a9838b24e27" style="base" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="0" width="173" height="16" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="73838c95-a607-4f37-9108-5a9838b24e27" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="79" width="173" height="16" isRemoveLineWhenBlank="true"/>
 				<textElement>
 					<font fontName="Open Sans" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{mail-line-1_1}]]></textFieldExpression>
 			</textField>
+			<image onErrorType="Blank">
+				<reportElement uuid="2d16fc74-a19d-4df0-a5d6-06465493c786" isPrintRepeatedValues="false" x="0" y="0" width="117" height="77" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$F{picture-path}.isEmpty() == false]]></printWhenExpression>
+				</reportElement>
+				<imageExpression><![CDATA[$F{picture-path}]]></imageExpression>
+			</image>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="0efecc6b-6b94-4cd6-81ae-a57c7040d7fa" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="17" width="173" height="16" isRemoveLineWhenBlank="true">
+				<reportElement uuid="0efecc6b-6b94-4cd6-81ae-a57c7040d7fa" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="96" width="173" height="16" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-2_1}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -177,7 +179,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-2_1}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="ebd2470c-faf9-4853-8a3d-569e866a048a" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" mode="Transparent" x="0" y="34" width="173" height="16" isRemoveLineWhenBlank="true" backcolor="#FFFFFF">
+				<reportElement uuid="ebd2470c-faf9-4853-8a3d-569e866a048a" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" mode="Transparent" x="0" y="113" width="173" height="16" isRemoveLineWhenBlank="true" backcolor="#FFFFFF">
 					<printWhenExpression><![CDATA[$F{mail-line-3_1}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -186,7 +188,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-3_1}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="bf9c384f-04fe-41be-9fd9-a25b78848a79" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="51" width="173" height="16" isRemoveLineWhenBlank="true">
+				<reportElement uuid="bf9c384f-04fe-41be-9fd9-a25b78848a79" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="130" width="173" height="16" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-4_1}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -195,7 +197,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-4_1}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="15e6995c-6fce-4498-86cb-0a9c882f414c" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="68" width="173" height="16" isRemoveLineWhenBlank="true">
+				<reportElement uuid="15e6995c-6fce-4498-86cb-0a9c882f414c" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="147" width="173" height="16" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-5_1}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -204,7 +206,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-5_1}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="3eee4d18-8a50-4603-a294-202070db410a" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="85" width="173" height="18" isRemoveLineWhenBlank="true">
+				<reportElement uuid="3eee4d18-8a50-4603-a294-202070db410a" style="base" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="0" y="164" width="173" height="18" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-6_1}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -213,7 +215,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-6_1}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="0e799a81-d2e5-4bc7-8cef-1d187d94c250" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="143" width="173" height="15" isRemoveLineWhenBlank="true">
+				<reportElement uuid="0e799a81-d2e5-4bc7-8cef-1d187d94c250" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="217" width="173" height="15" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-2}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -222,14 +224,14 @@
 				<textFieldExpression><![CDATA[$F{mail-line-2}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="caea26c9-7502-4ba2-adef-364340336b23" style="address" positionType="FixRelativeToBottom" isPrintRepeatedValues="false" x="284" y="128" width="173" height="15" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="caea26c9-7502-4ba2-adef-364340336b23" style="address" positionType="FixRelativeToBottom" isPrintRepeatedValues="false" x="284" y="202" width="173" height="15" isRemoveLineWhenBlank="true"/>
 				<textElement>
 					<font fontName="DejaVu Sans Mono"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{mail-line-1}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="81c3effe-5ac0-4949-9d6e-63795a833075" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="206" width="173" height="15" isRemoveLineWhenBlank="true">
+				<reportElement uuid="81c3effe-5ac0-4949-9d6e-63795a833075" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="280" width="173" height="15" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-6}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -238,7 +240,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-6}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="d66a6713-20f5-4a70-98f9-09f46eedd20a" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" mode="Transparent" x="284" y="159" width="173" height="15" isRemoveLineWhenBlank="true" backcolor="#FFFFFF">
+				<reportElement uuid="d66a6713-20f5-4a70-98f9-09f46eedd20a" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" mode="Transparent" x="284" y="233" width="173" height="15" isRemoveLineWhenBlank="true" backcolor="#FFFFFF">
 					<printWhenExpression><![CDATA[$F{mail-line-3}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -247,7 +249,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-3}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="9f81aee3-ce36-448a-8c43-c9e1d681bec2" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="190" width="173" height="15" isRemoveLineWhenBlank="true">
+				<reportElement uuid="9f81aee3-ce36-448a-8c43-c9e1d681bec2" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="264" width="173" height="15" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-5}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
@@ -256,7 +258,7 @@
 				<textFieldExpression><![CDATA[$F{mail-line-5}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="8fd6037d-3b16-4394-ad7f-6f66073bcf82" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="175" width="173" height="15" isRemoveLineWhenBlank="true">
+				<reportElement uuid="8fd6037d-3b16-4394-ad7f-6f66073bcf82" style="address" positionType="Float" stretchType="RelativeToTallestObject" isPrintRepeatedValues="false" x="284" y="249" width="173" height="15" isRemoveLineWhenBlank="true">
 					<printWhenExpression><![CDATA[$F{mail-line-4}.isEmpty() == false]]></printWhenExpression>
 				</reportElement>
 				<textElement>
