update reports for client_number

--- a/config/locales/fra/prints/sales_invoice.xml
+++ b/config/locales/fra/prints/sales_invoice.xml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="sale_invoice" language="groovy" pageWidth="595" pageHeight="842" columnWidth="545" leftMargin="25" rightMargin="25" topMargin="25" bottomMargin="25" isFloatColumnFooter="true" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
 	<property name="ireport.zoom" value="1.4019755979255695"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="1104"/>
+	<property name="ireport.y" value="0"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.xml"]]></template>
 	<style name="Title" fontName="DejaVu Sans" fontSize="50" isBold="true" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
@@ -137,7 +137,7 @@
 		<fieldDescription><![CDATA[expired-on]]></fieldDescription>
 	</field>
 	<field name="code-client" class="java.lang.String">
-		<fieldDescription><![CDATA[code-client]]></fieldDescription>
+		<fieldDescription><![CDATA[client-number]]></fieldDescription>
 	</field>
 	<field name="supplier-payment-address" class="java.lang.String">
 		<fieldDescription><![CDATA[supplier/default-mail-address/coordinate]]></fieldDescription>
